--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -43,7 +43,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="48dp"
-                        android:text="TextView"
                         />
 
 
@@ -58,7 +57,6 @@
                         android:id="@+id/billsLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="24dp"
                         android:text="@string/bills" />
 
                     <TextView
@@ -66,7 +64,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="48dp"
-                        android:text="TextView" />
+                        />
 
                 </LinearLayout>
                 <LinearLayout
@@ -77,7 +75,6 @@
                         android:id="@+id/debtLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
                         android:text="@string/debt"
                         />
                     <TextView
@@ -85,7 +82,6 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="48dp"
-                        android:text="TextView"
                         />
 
                 </LinearLayout>
@@ -105,7 +101,7 @@
                         android:id="@+id/savingsAmount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="TextView" />
+                        />
 
                 </LinearLayout>
                 <LinearLayout
@@ -116,7 +112,6 @@
                         android:id="@+id/investmentsLabel"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
                         android:text="@string/investments"
                         />
                     <TextView
@@ -124,9 +119,22 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="48dp"
-                        android:text="TextView"
                         />
 
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/otherLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/other" />
+                    <TextView
+                        android:id="@+id/otherAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
                 </LinearLayout>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
