--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -6,9 +6,34 @@
     tools:context=".DetailsFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_details_fragment" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/tableHeader">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/columnHeaderDate"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/columnHeaderDescription"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/columnHeaderAmount"
+                    android:textAlignment="center" />
+            </TableRow>
+        </TableLayout>
+
+    </LinearLayout>
 </FrameLayout>
