--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,11 +17,11 @@
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColorHint">#9797A2</item>
-        <item name="hintTextColor">@color/colorAccent</item>
-        <item name="boxStrokeColor">@color/colorAccent</item>
-        <item name="colorControlNormal">@color/colorAccent</item>
-        <item name="colorControlActivated">@color/colorAccent</item>
-        <item name="colorControlHighlight">@color/colorAccent</item>
+        <item name="hintTextColor">@color/teal_700</item>
+        <item name="boxStrokeColor">@color/teal_700</item>
+        <item name="colorControlNormal">@color/teal_700</item>
+        <item name="colorControlActivated">@color/teal_700</item>
+        <item name="colorControlHighlight">@color/teal_700</item>
         <item name="boxCornerRadiusBottomEnd">3dp</item>
         <item name="boxCornerRadiusBottomStart">3dp</item>
         <item name="boxCornerRadiusTopEnd">3dp</item>
