last second adjustments

--- a/app/src/main/res/layout/fragment_input_fields.xml
+++ b/app/src/main/res/layout/fragment_input_fields.xml
@@ -8,27 +8,30 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_padding="60dp">
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Create New Transaction"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            tools:layout_editor_absoluteX="150dp"
+            tools:layout_editor_absoluteY="623dp" />
+
         <AutoCompleteTextView
             android:id="@+id/descriptionfield"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
+            android:layout_marginTop="80dp"
             android:hint="Description"
+            android:minHeight="48dp"
             app:layout_constraintBottom_toTopOf="@+id/button3"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <EditText
             android:id="@+id/dateinputfield"
             android:layout_width="wrap_content"
@@ -38,10 +41,9 @@
             android:hint="Date"
             android:inputType="date"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/button3"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionfield" />
+            tools:layout_editor_absoluteX="86dp"
+            tools:layout_editor_absoluteY="138dp" />
+
         <EditText
             android:id="@+id/amountinput"
             android:layout_width="wrap_content"
@@ -51,14 +53,31 @@
             android:hint="Amount"
             android:inputType="number"
             android:minHeight="48dp"
-            />
+            tools:layout_editor_absoluteX="100dp"
+            tools:layout_editor_absoluteY="270dp" />
+
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             android:layout_weight="0"
-            tools:layout_editor_absoluteX="-51dp"
-            tools:layout_editor_absoluteY="66dp" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="128dp" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="3"
+            android:scaleY="3"
+            android:text="@string/newTransaction"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="48dp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
