--- a/app/src/main/res/layout/fragment_view_all.xml
+++ b/app/src/main/res/layout/fragment_view_all.xml
@@ -5,10 +5,38 @@
     android:layout_height="match_parent"
     tools:context=".ViewAllFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
+            <TextView
+                android:id="@+id/columnHeaderDate"
+                android:textAlignment="center"
+                android:text="@string/date"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
 
+            <TextView
+                android:id="@+id/columnHeaderDescription"
+                android:textAlignment="center"
+                android:text="@string/description"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+
+
+            <TextView
+                android:id="@+id/columnHeaderAmount"
+                android:textAlignment="center"
+                android:text="@string/amount"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+
+
+        </LinearLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/budgetRecView"/>
+    </LinearLayout>
 </FrameLayout>
