--- a/app/src/main/res/layout/fragment_input_fields.xml
+++ b/app/src/main/res/layout/fragment_input_fields.xml
@@ -9,52 +9,55 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        android:padding="50dp">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addNewButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/addNew"
-            tools:layout_editor_absoluteX="150dp"
-            tools:layout_editor_absoluteY="623dp" />
+            android:layout_marginTop="24dp"
+            android:text="@string/add_new"
+            app:layout_constraintEnd_toEndOf="@+id/amountInput"
+            app:layout_constraintStart_toStartOf="@+id/amountInput"
+            app:layout_constraintTop_toBottomOf="@+id/amountInput" />
 
         <AutoCompleteTextView
-            android:id="@+id/descriptionfield"
+            android:id="@+id/descriptionField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="24dp"
             android:hint="Description"
             android:minHeight="48dp"
-            app:layout_constraintBottom_toTopOf="@+id/button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="@+id/spinner"
+            app:layout_constraintStart_toStartOf="@+id/spinner"
+            app:layout_constraintTop_toBottomOf="@+id/spinner" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/dateInputField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            app:layout_constraintEnd_toEndOf="@+id/descriptionField"
+            app:layout_constraintStart_toStartOf="@+id/descriptionField"
+            app:layout_constraintTop_toBottomOf="@+id/descriptionField"
+            android:hint="@string/enter_date"
+            >
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <EditText
-            android:id="@+id/dateinputfield"
+            android:id="@+id/amountInput"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:autoText="true"
-            android:ems="10"
-            android:hint="Date"
-            android:inputType="date"
-            android:minHeight="48dp"
-            tools:layout_editor_absoluteX="86dp"
-            tools:layout_editor_absoluteY="138dp" />
-
-        <EditText
-            android:id="@+id/amountinput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoText="true"
-            android:ems="10"
+            android:layout_marginTop="24dp"
             android:hint="Amount"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:minHeight="48dp"
-            tools:layout_editor_absoluteX="100dp"
-            tools:layout_editor_absoluteY="270dp" />
+            app:layout_constraintEnd_toEndOf="@+id/dateInputField"
+            app:layout_constraintStart_toStartOf="@+id/dateInputField"
+            app:layout_constraintTop_toBottomOf="@+id/dateInputField" />
 
         <Spinner
             android:id="@+id/spinner"
@@ -63,21 +66,14 @@
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
             android:layout_weight="0"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="128dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.19999999" />
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleX="3"
-            android:scaleY="3"
-            android:text="@string/ui_new_transaction"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_editor_absoluteY="48dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
