--- a/app/src/main/res/layout/fragment_input_fields.xml
+++ b/app/src/main/res/layout/fragment_input_fields.xml
@@ -39,25 +39,30 @@
             app:layout_constraintEnd_toEndOf="@+id/descriptionField"
             app:layout_constraintStart_toStartOf="@+id/descriptionField"
             app:layout_constraintTop_toBottomOf="@+id/descriptionField"
-            android:hint="@string/enter_date"
+            android:hint="@string/date"
             >
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusable="false" />
         </com.google.android.material.textfield.TextInputLayout>
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/amountInput"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:hint="Amount"
             android:inputType="numberDecimal"
-            android:minHeight="48dp"
+            android:hint="@string/amount"
+            app:placeholderText="@string/zero_amount"
             app:layout_constraintEnd_toEndOf="@+id/dateInputField"
             app:layout_constraintStart_toStartOf="@+id/dateInputField"
-            app:layout_constraintTop_toBottomOf="@+id/dateInputField" />
+            app:layout_constraintTop_toBottomOf="@+id/dateInputField">
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="numberDecimal"
+                />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Spinner
             android:id="@+id/spinner"
