--- a/app/src/main/res/layout/budget_line_item.xml
+++ b/app/src/main/res/layout/budget_line_item.xml
@@ -21,7 +21,7 @@ Not using this
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:background="@color/white">
 
             <TextView
                 android:id="@+id/txtDate"
