--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:title="@string/ui_home"
+    <item
+        android:id="@+id/homeFragment"
         android:icon="@drawable/ic_home"
-        android:id="@+id/homeFragment"/>
+        android:title="@string/ui_home" />
     <item android:title="@string/ui_view_all"
         android:id="@+id/viewAllFragment"
         android:icon="@drawable/ic_view_all" />
