--- a/app/src/main/res/menu/bottom_nav.xml
+++ b/app/src/main/res/menu/bottom_nav.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:title="@string/ui_home"
         android:icon="@drawable/ic_home"
-        android:id="@+id/action_global_homeFragment"/>
+        android:id="@+id/homeFragment"/>
     <item android:title="@string/ui_view_all"
-        android:id="@+id/action_global_viewAllFragment"
+        android:id="@+id/viewAllFragment"
         android:icon="@drawable/ic_view_all" />
     <item android:title="@string/ui_new_transaction"
-        android:id="@+id/action_global_inputFieldsFragment"
+        android:id="@+id/inputFieldsFragment"
         android:icon="@drawable/ic_add_new"
         />
 </menu>
